fix styling issue for header menu on iphones

--- a/src/styles/components/Header.css
+++ b/src/styles/components/Header.css
@@ -65,6 +65,10 @@
   .headerArea{
     justify-content: space-evenly;
   }
+  html, body{
+    overflow-x: hidden;
+    position: relative;
+  }
 }
 
 
